--- a/external.css
+++ b/external.css
@@ -1,5 +1,5 @@
 .main {
-    background-color: orange;
+    background-color: rgb(193, 168, 123);
 }
 .main1 {
     background-color: rgb(0, 255, 247);
